cabal-version:      2.4
name:               artemohanjanyan-haskell-via-sokoban
version:            0.1.0.0

author:             Artem Ohanjanyan
maintainer:         artemohanjanyan@gmail.com


executable sokoban
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base ^>=4.12.0.0
                    , codeworld-api ^>=0.7.0
                    , artemohanjanyan-haskell-via-sokoban
    ghc-options:      -threaded -Wall

library
    hs-source-dirs:   lib
    exposed-modules:  List
                    , Core
                    , Pictures
                    , Activity
                    , State
                    , Drawing
                    , Mazes
    build-depends:    base ^>=4.12.0.0
                    , codeworld-api ^>=0.7.0
    default-language: Haskell2010
    ghc-options:      -threaded -Wall
