cabal-version:      2.4
name:               sokoban-codeworld
version:            0.1.0.0

author:             Artem Ohanjanyan
maintainer:         artemohanjanyan@gmail.com

executable sokoban-codeworld
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base ^>=4.12.0.0
                    , codeworld-api ^>=0.7.0
                    , sokoban-codeworld
                    , sokoban-common
    ghc-options:      -threaded -Wall
    default-language: Haskell2010

library
    hs-source-dirs:   lib
    exposed-modules:  Drawing
                    , Pictures
    build-depends:    base ^>=4.12.0.0
                    , codeworld-api ^>=0.7.0
                    , sokoban-common
    ghc-options:      -Wall
    default-language: Haskell2010
